@@ -2,6 +2,9 @@
   o When the user clicks "Browse" in the Advanced settings page to locate
     a new torrc, set the initial directory shown in the file dialog to the
     current location of the user's torrc. (Ticket #505)
+  o Use 'ditto' to strip the architectures we don't want from the Qt
+    frameworks installed into the app bundle with the dist-osx,
+    dist-osx-bundle and dist-osx-split-bundle build targets.
 
 
 0.2.1   03-Aug-2009
